--- a/news.html
+++ b/news.html
@@ -80,6 +80,9 @@
                             <a href="javascript:;" class="menu__link">Chứng khoán</a>
                         </li>
                         <li class="menu__item">
+                            <a href="./news.html" class="menu__link">Tin tức</a>
+                        </li>
+                        <li class="menu__item">
                             <a href="./video.html" class="menu__link">Video</a>
                         </li>
                         <li class="menu__item">
