--- a/photo-detail.html
+++ b/photo-detail.html
@@ -144,49 +144,49 @@
                 <section class="photo-detail">
                     <div class="container">
                         <div class="photo-detail__group row">
-                            <div class="col-xl-4 col-lg-3 col-md-6 item">
+                            <div class="col-xl-4 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 28.png" data-fancybox="detail-photo">
                                         <img src="./images/image 28.png" alt="">
                                     </a>
                                 </figure>
                             </div>
-                            <div class="col-xl-4 col-lg-3 col-md-6 item">
+                            <div class="col-xl-4 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 29.png" data-fancybox="detail-photo">
                                         <img src="./images/image 29.png" alt="">
                                     </a>
                                 </figure>
                             </div>
-                            <div class="col-xl-4 col-lg-3 col-md-6 item">
+                            <div class="col-xl-4 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 31.png" data-fancybox="detail-photo">
                                         <img src="./images/image 31.png" alt="">
                                     </a>
                                 </figure>
                             </div>
-                            <div class="col-xl-3 col-lg-3 col-md-6 item">
+                            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 28.png" data-fancybox="detail-photo">
                                         <img src="./images/image 28.png" alt="">
                                     </a>
                                 </figure>
                             </div>
-                            <div class="col-xl-3 col-lg-3 col-md-6 item">
+                            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 29.png" data-fancybox="detail-photo">
                                         <img src="./images/image 29.png" alt="">
                                     </a>
                                 </figure>
                             </div>
-                            <div class="col-xl-3 col-lg-3 col-md-6 item">
+                            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 31.png" data-fancybox="detail-photo">
                                         <img src="./images/image 31.png" alt="">
                                     </a>
                                 </figure>
                             </div>
-                            <div class="col-xl-3 col-lg-3 col-md-6 item">
+                            <div class="col-xl-3 col-lg-3 col-md-4 col-sm-6 item">
                                 <figure class="images">
                                     <a href="./images/image 29.png" data-fancybox="detail-photo">
                                         <img src="./images/image 29.png" alt="">
