--- a/photo.html
+++ b/photo.html
@@ -315,9 +315,9 @@
                                 <div class="footer__info">
                                     <strong>HUB Investment</strong>
                                     <p>Địa chỉ: Số 8 Trần Kim Xuyến, Phường Yên Hoà, Quận Cầu Giấy, Thành phố Hà Nội, Việt Nam </p>
-                                    <p>Email: info@hub.com </p>
-                                    <p>Tel: +84-24-35763500 </p>
-                                    <p>Fax: +84-24-35763498</p>
+                                    <p>Email: <a href="mailto:info@hub.com">info@hub.com</a> </p>
+                                    <p>Tel: <a href="tel:+84-24-35763500">+84-24-35763500</a> </p>
+                                    <p>Fax: <a href="tel:+84-24-35763498">+84-24-35763498</a></p>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -412,9 +412,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.6.13/flatpickr.min.js"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <script src="./lib/js/style.js"></script>
     <script src="./lib/js/slide.js"></script>
+    <script>
+        new WOW().init();
+    </script>
 </body>
 
 </html>
